2000-06-22 18:15 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/gtcrs/kbdcrs.c
    *source/rtl/gtsln/kbsln.c
	*fixed after latest changes


2000-06-22 03:30 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * include/hbclass.ch
     ! Uncommented  #xtranslate that was not pre-processing correctly, before recent fixes to ppcore.c and now works correctly.

   * source/compiler/harbour.c
     ! Fixed hb_compLinePush() to generate correct Run-Time Line Numbers.

   * source/pp/ppcomp.c
     - Removed one // comment.

   * source/pp/ppcore.c
     * Increased MAX_EXP to 2048 as requested by Brian Hays.

2000-06-21 21:35 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * source/pp/ppcore.c
     ! getExpReal() Fixed silly typo introduced this morning in previous fix, that broke the PP.

2000-06-22 03:23 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/rtl/filesys.c
     * Some formatting and cleanups.

   * contrib/hbclip/hbclip.ch
     + Some HB_ constants added.

   * include/inkey.ch
     * K_HB_KEYCODES -> HB_K_MULTICODE

2000-06-21 10:58 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * source/pp/ppcore.c
     ! getExpReal() to not return invalid Clipper Expression like unterminated '([{'. This will solve many PP problems.

2000-06-21 14:19 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * include/hbextern.ch
   * include/fileio.ch
   + source/rtl/disksphb.c
   * source/rtl/Makefile
   * makefile.bc
   * makefile.vc
     * DISKSPACE() made 100% CA-Clipper compatible, so that the second optional
       extension parameter was removed. The UNIX support has been removed
       since the first parameter should always be a numeric value.
     + HB_DISKSPACE() extension function added, with the optional second
       parameter. This function will always need a string as the first
       parameter, you can also query space data for a specific directory
       on the systems where this is supported (Unix, Win32).